tests/lean/331.lean.expected.out
331.lean:6:13-6:14: error: Failed to infer type for binder `x`.

context:
⊢ Sort ?u
331.lean:6:0-6:21: warning: Declaration type has metavariables.

Recall that when the resulting type of a declaration is explicitly provided, all placeholders (e.g., `_`) in the header must be resolved before the declaration body is processed.
331.lean:7:13-7:14: error: Failed to infer type for binder `x`.

context:
⊢ Sort ?u
331.lean:7:0-7:21: warning: Declaration type has metavariables.

Recall that when the resulting type of a declaration is explicitly provided, all placeholders (e.g., `_`) in the header must be resolved before the declaration body is processed.
